name:                Stochastic
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Stochastic
  hs-source-dirs:      .
  main-is:             ParticleSmoothingMain.hs
  ghc-options:
  build-depends:       base
                     , Stochastic
                     , random-fu >=0.2 && <0.3
                     , random-source >=0.3 && <0.4
                     , mwc-random >=0.13 && <0.14
                     , monad-loops >=0.4 && <0.5
                     , pretty >=1.1 && <1.2
                     , repa >=3.4 && <3.5
                     , hmatrix >=0.17 && <0.18
                     , mtl >=2.2 && <2.3
                     , vector >=0.11 && <0.12
                     , diagrams-cairo >=1.3 && <1.4
                     , diagrams-lib >=1.3 && <1.4
                     , Chart >=1.5 && <1.6
                     , Chart-diagrams >=1.5 && <1.6
  default-language:    Haskell2010

test-suite stochastic-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Stochastic
  ghc-options:
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/idontgetoutmuch/RandomWalks
